JBTM-3067 update to support the JDK11